--- a/_posts/2016-02-15-its-open.md
+++ b/_posts/2016-02-15-its-open.md
@@ -3,11 +3,11 @@ layout: post
 title: It's open!
 ---
 
-The party last Saturday was awesome! Thank you all for visiting, the presents and many thanks to all the other hackerspaces for helping out! This has really kickstarted the current space. We've also received lots of ideas and input on how we should create and arrange everything in the new (upcoming) space.
+The party last Saturday was awesome! Thank you all for visiting, the presents and many thanks to all the other hackerspaces for helping out! This has really kickstarted the current space. We've also received lots of ideas and input on how we could create and arrange everything in the new (upcoming) space.
 
 [Keilefest](http://keilefest.nl) did a great job on the festival, with artists like [WLDRF](http://wldrf.nl/) and the great food and beverages.
 
-But most of all, thank you Brenno for giving a presentation and explaining the world about hackerspaces (Dutch):
+But most of all, thank you [Brenno](https://twitter.com/brenno) for giving a presentation and explaining the world about hackerspaces (Dutch):
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uh8JPt6GkNM" frameborder="0" allowfullscreen></iframe>
 
