--- a/_posts/2016-02-15-its-open.md
+++ b/_posts/2016-02-15-its-open.md
@@ -9,7 +9,7 @@ The party last Saturday was awesome! Thank you all for visiting, the presents an
 
 But most of all, thank you [Brenno](https://twitter.com/brenno) for giving a presentation and explaining the world about hackerspaces (Dutch):
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/uh8JPt6GkNM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TD9cl__ADXg" frameborder="0" allowfullscreen></iframe>
 
 ---
 Media coverage (Dutch)
