--- a/_posts/2019-03-06-open-doors-day-2019.md
+++ b/_posts/2019-03-06-open-doors-day-2019.md
@@ -11,7 +11,7 @@ If you have your own small project, just bring it. There is plenty of room in ou
 
 In the evening there might be some participants left, so don’t hesitate to drop by if you don’t make it before 17:00. On our website [pixelbar.nl](https://www.pixelbar.nl/) you can see whether we're open or closed.
 There is no need to sign up, just come by. When the outside doors are closed, just push the big red button on the door in the middle of the building and someone will come to open the door.
-When you can’t visit us on the 30th of February then you’re always welcome to visit us on Wednesdays or Saturdays, check on our website whether we’re open or closed.
+When you can’t visit us on the 30th of March then you’re always welcome to visit us on Wednesdays or Saturdays, check on our website whether we’re open or closed.
 
 Do you want to visit other hackerspaces too? Check out the [Dutch hackerspaces site](https://hackerspaces.nl/open-dag/).
 
@@ -28,7 +28,7 @@ Als jij jou eigen kleine project hebt, breng het mee er is namelijk genoeg ruimt
 
 'S Avonds zijn er misschien nog wat deelnemers, dus aarzel niet om langs te komen als je het niet redt om voor 17.00 uur langs te komen. Op onze website [pixelbar.nl] (https://www.pixelbar.nl/) kunt u zien of we open of gesloten zijn.
 Het is niet nodig om je van te voren aan te melden, kom gewoon langs! Wanneer de buitendeuren gesloten zijn, drukt u gewoon op de grote rode knop op de deur in het midden van het gebouw en iemand zal komen om de deur te openen.
-Wanneer u ons op 30 februari niet kunt bezoeken, dan bent u altijd welkom om ons te bezoeken op de woensdag- of zaterdagavonden.
+Wanneer u ons op 30 Maart niet kunt bezoeken, dan bent u altijd welkom om ons te bezoeken op de woensdag- of zaterdagavonden.
 
 Wil je ook andere hackerspaces bezoeken? Bekijk de [site van Nederlandse hackerspaces](https://hackerspaces.nl/open-dag/).
 
